Source/Alternet.UI.Pal/Api/AuiPaneInfo.Api.h

ALTERNET_UI_API void AuiPaneInfo_Restore_(void* handle)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::Restore(handle);
        });
}
ALTERNET_UI_API void AuiPaneInfo_PaneBorder_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::PaneBorder(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_Gripper_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::Gripper(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_GripperTop_(void* handle, c_bool attop)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::GripperTop(handle, attop);
        });
}
ALTERNET_UI_API void AuiPaneInfo_CloseButton_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::CloseButton(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_MaximizeButton_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::MaximizeButton(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_MinimizeButton_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::MinimizeButton(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_PinButton_(void* handle, c_bool visible)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::PinButton(handle, visible);
        });
}
ALTERNET_UI_API void AuiPaneInfo_DestroyOnClose_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::DestroyOnClose(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_TopDockable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::TopDockable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_BottomDockable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::BottomDockable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_LeftDockable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::LeftDockable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_RightDockable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::RightDockable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_Floatable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::Floatable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_Movable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::Movable(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_DockFixed_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::DockFixed(handle, b);
        });
}
ALTERNET_UI_API void AuiPaneInfo_Dockable_(void* handle, c_bool b)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::Dockable(handle, b);
        });
}
ALTERNET_UI_API c_bool AuiPaneInfo_IsValid_(void* handle)
{
    return MarshalExceptions<c_bool>([&](){
            return AuiPaneInfo::IsValid(handle);
        });
}
ALTERNET_UI_API void AuiPaneInfo_DefaultPane_(void* handle)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::DefaultPane(handle);
        });
}
ALTERNET_UI_API void AuiPaneInfo_CenterPane_(void* handle)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::CenterPane(handle);
        });
}
ALTERNET_UI_API void AuiPaneInfo_ToolbarPane_(void* handle)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::ToolbarPane(handle);
        });
}
ALTERNET_UI_API void AuiPaneInfo_SetFlag_(void* handle, int flag, c_bool option_state)
{
    MarshalExceptions<void>([&](){
            AuiPaneInfo::SetFlag(handle, flag, option_state);
        });
}
ALTERNET_UI_API c_bool AuiPaneInfo_HasFlag_(void* handle, int flag)
{
    return MarshalExceptions<c_bool>([&](){
            return AuiPaneInfo::HasFlag(handle, flag);
        });
}