Source/Alternet.UI/Native/AuiPaneInfo.cs

            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_Restore_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_PaneBorder_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_Gripper_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_GripperTop_(System.IntPtr handle, bool attop);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_CloseButton_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_MaximizeButton_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_MinimizeButton_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_PinButton_(System.IntPtr handle, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_DestroyOnClose_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_TopDockable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_BottomDockable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_LeftDockable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_RightDockable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_Floatable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_Movable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_DockFixed_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_Dockable_(System.IntPtr handle, bool b);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiPaneInfo_IsValid_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_DefaultPane_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_CenterPane_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_ToolbarPane_(System.IntPtr handle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiPaneInfo_SetFlag_(System.IntPtr handle, int flag, bool option_state);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiPaneInfo_HasFlag_(System.IntPtr handle, int flag);
            
        }
    }
}
